// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`step button should render selected step button 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0 0.5rem;
  border: none;
  width: 100%;
  cursor: pointer;
}

.emotion-0:hover {
  color: #0078d4;
  background-color: #F3F2F1;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin-right: 0.5rem;
}

.emotion-3 {
  color: #605e5c;
  font-size: 0.6875rem;
}

<body>
    <div>
      <button
        aria-label="step-btn-label"
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <i
            aria-label="package.conversion"
            class="emotion-2 root-106"
            data-icon-name="StatusCircleRing"
            role="img"
          >
            
          </i>
          step-btn-title
        </div>
        <span
          class="emotion-3"
        />
      </button>
    </div>
  </body>,
  "container": .emotion-0 {
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0 0.5rem;
  border: none;
  width: 100%;
  cursor: pointer;
}

.emotion-0:hover {
  color: #0078d4;
  background-color: #F3F2F1;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin-right: 0.5rem;
}

.emotion-3 {
  color: #605e5c;
  font-size: 0.6875rem;
}

<div>
    <button
      aria-label="step-btn-label"
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <i
          aria-label="package.conversion"
          class="emotion-2 root-106"
          data-icon-name="StatusCircleRing"
          role="img"
        >
          
        </i>
        step-btn-title
      </div>
      <span
        class="emotion-3"
      />
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`step button should render selected step button with time 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0 0.5rem;
  border: none;
  width: 100%;
  cursor: pointer;
}

.emotion-0:hover {
  color: #0078d4;
  background-color: #F3F2F1;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin-right: 0.5rem;
}

.emotion-3 {
  color: #605e5c;
  font-size: 0.6875rem;
}

<body>
    <div>
      <button
        aria-label="step-btn-label"
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <i
            aria-label="package.conversion"
            class="emotion-2 root-106"
            data-icon-name="StatusCircleRing"
            role="img"
          >
            
          </i>
          step-btn-title
        </div>
        <span
          class="emotion-3"
        />
      </button>
    </div>
  </body>,
  "container": .emotion-0 {
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0 0.5rem;
  border: none;
  width: 100%;
  cursor: pointer;
}

.emotion-0:hover {
  color: #0078d4;
  background-color: #F3F2F1;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin-right: 0.5rem;
}

.emotion-3 {
  color: #605e5c;
  font-size: 0.6875rem;
}

<div>
    <button
      aria-label="step-btn-label"
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <i
          aria-label="package.conversion"
          class="emotion-2 root-106"
          data-icon-name="StatusCircleRing"
          role="img"
        >
          
        </i>
        step-btn-title
      </div>
      <span
        class="emotion-3"
      />
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`step button should render selected step button with time diff 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0 0.5rem;
  border: none;
  width: 100%;
  cursor: pointer;
}

.emotion-0:hover {
  color: #0078d4;
  background-color: #F3F2F1;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin-right: 0.5rem;
}

.emotion-3 {
  color: #605e5c;
  font-size: 0.6875rem;
}

<body>
    <div>
      <button
        aria-label="step-btn-label"
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <i
            aria-label="package.conversion"
            class="emotion-2 root-106"
            data-icon-name="StatusCircleRing"
            role="img"
          >
            
          </i>
          step-btn-title
        </div>
        <span
          class="emotion-3"
        >
          ~2s
        </span>
      </button>
    </div>
  </body>,
  "container": .emotion-0 {
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0 0.5rem;
  border: none;
  width: 100%;
  cursor: pointer;
}

.emotion-0:hover {
  color: #0078d4;
  background-color: #F3F2F1;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin-right: 0.5rem;
}

.emotion-3 {
  color: #605e5c;
  font-size: 0.6875rem;
}

<div>
    <button
      aria-label="step-btn-label"
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <i
          aria-label="package.conversion"
          class="emotion-2 root-106"
          data-icon-name="StatusCircleRing"
          role="img"
        >
          
        </i>
        step-btn-title
      </div>
      <span
        class="emotion-3"
      >
        ~2s
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`step button should render selected step button with time diff with status failed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0 0.5rem;
  border: none;
  width: 100%;
  cursor: pointer;
}

.emotion-0:hover {
  color: #0078d4;
  background-color: #F3F2F1;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin-right: 0.5rem;
  color: #A80000;
}

.emotion-3 {
  color: #605e5c;
  font-size: 0.6875rem;
}

<body>
    <div>
      <button
        aria-label="step-btn-label"
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <i
            aria-label="package.conversion"
            class="emotion-2 root-115"
            data-icon-name="StatusErrorFull"
            role="img"
          >
            
          </i>
          step-btn-title
        </div>
        <span
          class="emotion-3"
        >
          ~2s
        </span>
      </button>
    </div>
  </body>,
  "container": .emotion-0 {
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0 0.5rem;
  border: none;
  width: 100%;
  cursor: pointer;
}

.emotion-0:hover {
  color: #0078d4;
  background-color: #F3F2F1;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin-right: 0.5rem;
  color: #A80000;
}

.emotion-3 {
  color: #605e5c;
  font-size: 0.6875rem;
}

<div>
    <button
      aria-label="step-btn-label"
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <i
          aria-label="package.conversion"
          class="emotion-2 root-115"
          data-icon-name="StatusErrorFull"
          role="img"
        >
          
        </i>
        step-btn-title
      </div>
      <span
        class="emotion-3"
      >
        ~2s
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`step button should render selected step button with time diff with status in progress 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0 0.5rem;
  border: none;
  width: 100%;
  cursor: pointer;
}

.emotion-0:hover {
  color: #0078d4;
  background-color: #F3F2F1;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin-right: 0.5rem;
  color: #0078d4;
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
}

.emotion-3 {
  color: #605e5c;
  font-size: 0.6875rem;
}

<body>
    <div>
      <button
        aria-label="step-btn-label"
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <i
            aria-label="package.conversion"
            class="emotion-2 root-109"
            data-icon-name="SyncStatusSolid"
            role="img"
          >
            
          </i>
          step-btn-title
        </div>
        <span
          class="emotion-3"
        >
          ~2s
        </span>
      </button>
    </div>
  </body>,
  "container": @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0 0.5rem;
  border: none;
  width: 100%;
  cursor: pointer;
}

.emotion-0:hover {
  color: #0078d4;
  background-color: #F3F2F1;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin-right: 0.5rem;
  color: #0078d4;
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
}

.emotion-3 {
  color: #605e5c;
  font-size: 0.6875rem;
}

<div>
    <button
      aria-label="step-btn-label"
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <i
          aria-label="package.conversion"
          class="emotion-2 root-109"
          data-icon-name="SyncStatusSolid"
          role="img"
        >
          
        </i>
        step-btn-title
      </div>
      <span
        class="emotion-3"
      >
        ~2s
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`step button should render selected step button with time diff with status success 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0 0.5rem;
  border: none;
  width: 100%;
  cursor: pointer;
}

.emotion-0:hover {
  color: #0078d4;
  background-color: #F3F2F1;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin-right: 0.5rem;
  color: #107c10;
}

.emotion-3 {
  color: #605e5c;
  font-size: 0.6875rem;
}

<body>
    <div>
      <button
        aria-label="step-btn-label"
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <i
            aria-label="package.conversion"
            class="emotion-2 root-112"
            data-icon-name="SkypeCircleCheck"
            role="img"
          >
            
          </i>
          step-btn-title
        </div>
        <span
          class="emotion-3"
        >
          ~2s
        </span>
      </button>
    </div>
  </body>,
  "container": .emotion-0 {
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0 0.5rem;
  border: none;
  width: 100%;
  cursor: pointer;
}

.emotion-0:hover {
  color: #0078d4;
  background-color: #F3F2F1;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin-right: 0.5rem;
  color: #107c10;
}

.emotion-3 {
  color: #605e5c;
  font-size: 0.6875rem;
}

<div>
    <button
      aria-label="step-btn-label"
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <i
          aria-label="package.conversion"
          class="emotion-2 root-112"
          data-icon-name="SkypeCircleCheck"
          role="img"
        >
          
        </i>
        step-btn-title
      </div>
      <span
        class="emotion-3"
      >
        ~2s
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`step button should render unselected step button 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0 0.5rem;
  border: none;
  width: 100%;
  cursor: pointer;
}

.emotion-0:hover {
  color: #0078d4;
  background-color: #F3F2F1;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin-right: 0.5rem;
}

.emotion-3 {
  color: #605e5c;
  font-size: 0.6875rem;
}

<body>
    <div>
      <button
        aria-label="step-btn-label"
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <i
            aria-label="package.conversion"
            class="emotion-2 root-106"
            data-icon-name="StatusCircleRing"
            role="img"
          >
            
          </i>
          step-btn-title
        </div>
        <span
          class="emotion-3"
        />
      </button>
    </div>
  </body>,
  "container": .emotion-0 {
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0 0.5rem;
  border: none;
  width: 100%;
  cursor: pointer;
}

.emotion-0:hover {
  color: #0078d4;
  background-color: #F3F2F1;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin-right: 0.5rem;
}

.emotion-3 {
  color: #605e5c;
  font-size: 0.6875rem;
}

<div>
    <button
      aria-label="step-btn-label"
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <i
          aria-label="package.conversion"
          class="emotion-2 root-106"
          data-icon-name="StatusCircleRing"
          role="img"
        >
          
        </i>
        step-btn-title
      </div>
      <span
        class="emotion-3"
      />
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
